Update release notes

--- a/v1.20.0-dev.md
+++ b/v1.20.0-dev.md
@@ -18,14 +18,14 @@
 # CRI-O v1.20.0-dev
 
 The release notes have been generated for the commit range
-[v1.19.0...36c46c1](https://github.com/cri-o/cri-o/compare/v1.19.0...36c46c10fbc1c219157047288d8c3ebc3f82a51b) on Sat, 06 Feb 2021 03:02:16 UTC.
+[v1.19.0...fd2a16d](https://github.com/cri-o/cri-o/compare/v1.19.0...fd2a16d43303dd13846cce28964d2d4dde801afd) on Tue, 09 Feb 2021 01:52:51 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-36c46c10f.tar.gz][0]
+[crio-fd2a16d43.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-36c46c10f.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-fd2a16d43.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -43,6 +43,7 @@ Download the static release bundle via our Google Cloud Bucket:
  - Add support for CRI v1 protocol side by side to the existing v1alpha2 ([#4408](https://github.com/cri-o/cri-o/pull/4408), [@saschagrunert](https://github.com/saschagrunert))
  - Added `crio-status.8` man page to static release bundle ([#4510](https://github.com/cri-o/cri-o/pull/4510), [@saschagrunert](https://github.com/saschagrunert))
  - Allow using userns together with ManageNSLifecycle ([#4333](https://github.com/cri-o/cri-o/pull/4333), [@kolyshkin](https://github.com/kolyshkin))
+ - Bump containers image to v5.10.1 ([#4519](https://github.com/cri-o/cri-o/pull/4519), [@QiWang19](https://github.com/QiWang19))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a bug where pods with `hostNetwork: true` couldn't have ports forwarded from them when drop_infra_ctr=true ([#4495](https://github.com/cri-o/cri-o/pull/4495), [@haircommander](https://github.com/haircommander))
  - It is possible to override cgroup v2 unified configuration through the io.kubernetes.cri-o.UnifiedCgroup.$CTR_NAME annotation ([#4479](https://github.com/cri-o/cri-o/pull/4479), [@giuseppe](https://github.com/giuseppe))
@@ -176,9 +177,9 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/containers/buildah: [v1.14.9 → v1.15.2](https://github.com/containers/buildah/compare/v1.14.9...v1.15.2)
 - github.com/containers/common: [v0.9.1 → v0.21.0](https://github.com/containers/common/compare/v0.9.1...v0.21.0)
 - github.com/containers/conmon: [v2.0.17+incompatible → v2.0.20+incompatible](https://github.com/containers/conmon/compare/v2.0.17...v2.0.20)
-- github.com/containers/image/v5: [v5.5.1 → v5.9.0](https://github.com/containers/image/v5/compare/v5.5.1...v5.9.0)
+- github.com/containers/image/v5: [v5.5.1 → v5.10.1](https://github.com/containers/image/v5/compare/v5.5.1...v5.10.1)
 - github.com/containers/psgo: [v1.4.0 → v1.5.1](https://github.com/containers/psgo/compare/v1.4.0...v1.5.1)
-- github.com/containers/storage: [v1.20.2 → v1.24.4](https://github.com/containers/storage/compare/v1.20.2...v1.24.4)
+- github.com/containers/storage: [v1.20.2 → v1.24.5](https://github.com/containers/storage/compare/v1.20.2...v1.24.5)
 - github.com/coreos/etcd: [v3.3.10+incompatible → v3.3.13+incompatible](https://github.com/coreos/etcd/compare/v3.3.10...v3.3.13)
 - github.com/docker/docker: [aa6a989 → bd33bbf](https://github.com/docker/docker/compare/aa6a989...bd33bbf)
 - github.com/evanphx/json-patch: [e83c0a1 → v4.9.0+incompatible](https://github.com/evanphx/json-patch/compare/e83c0a1...v4.9.0)
@@ -187,6 +188,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/go-git/go-git/v5: [v5.1.0 → v5.2.0](https://github.com/go-git/go-git/v5/compare/v5.1.0...v5.2.0)
 - github.com/go-gl/glfw/v3.3/glfw: [12ad95a → 6f7a984](https://github.com/go-gl/glfw/v3.3/glfw/compare/12ad95a...6f7a984)
 - github.com/go-sql-driver/mysql: [v1.4.0 → v1.5.0](https://github.com/go-sql-driver/mysql/compare/v1.4.0...v1.5.0)
+- github.com/gogo/protobuf: [v1.3.1 → v1.3.2](https://github.com/gogo/protobuf/compare/v1.3.1...v1.3.2)
 - github.com/golang/groupcache: [215e871 → 8c9f03a](https://github.com/golang/groupcache/compare/215e871...8c9f03a)
 - github.com/golang/mock: [v1.4.3 → v1.4.4](https://github.com/golang/mock/compare/v1.4.3...v1.4.4)
 - github.com/google/cadvisor: [v0.37.0 → v0.38.5](https://github.com/google/cadvisor/compare/v0.37.0...v0.38.5)
@@ -203,7 +205,8 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/insomniacslk/dhcp: [81b9770 → ed3125c](https://github.com/insomniacslk/dhcp/compare/81b9770...ed3125c)
 - github.com/jmespath/go-jmespath: [c2b33e8 → v0.4.0](https://github.com/jmespath/go-jmespath/compare/c2b33e8...v0.4.0)
 - github.com/karrick/godirwalk: [v1.7.5 → v1.16.1](https://github.com/karrick/godirwalk/compare/v1.7.5...v1.16.1)
-- github.com/klauspost/compress: [v1.10.8 → v1.11.6](https://github.com/klauspost/compress/compare/v1.10.8...v1.11.6)
+- github.com/kisielk/errcheck: [v1.2.0 → v1.5.0](https://github.com/kisielk/errcheck/compare/v1.2.0...v1.5.0)
+- github.com/klauspost/compress: [v1.10.8 → v1.11.7](https://github.com/klauspost/compress/compare/v1.10.8...v1.11.7)
 - github.com/klauspost/pgzip: [v1.2.4 → v1.2.5](https://github.com/klauspost/pgzip/compare/v1.2.4...v1.2.5)
 - github.com/kr/pretty: [v0.2.0 → v0.2.1](https://github.com/kr/pretty/compare/v0.2.0...v0.2.1)
 - github.com/maxbrunsfeld/counterfeiter/v6: [v6.2.3 → v6.3.0](https://github.com/maxbrunsfeld/counterfeiter/v6/compare/v6.2.3...v6.3.0)
@@ -233,9 +236,10 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/spf13/cobra: [v1.0.0 → v1.1.1](https://github.com/spf13/cobra/compare/v1.0.0...v1.1.1)
 - github.com/spf13/viper: [v1.6.1 → v1.7.0](https://github.com/spf13/viper/compare/v1.6.1...v1.7.0)
 - github.com/storageos/go-api: [343b3ef → v2.2.0+incompatible](https://github.com/storageos/go-api/compare/343b3ef...v2.2.0)
+- github.com/stretchr/testify: [v1.6.1 → v1.7.0](https://github.com/stretchr/testify/compare/v1.6.1...v1.7.0)
 - github.com/uber/jaeger-client-go: [v2.22.1+incompatible → v2.24.0+incompatible](https://github.com/uber/jaeger-client-go/compare/v2.22.1...v2.24.0)
-- github.com/ulikunitz/xz: [v0.5.7 → v0.5.8](https://github.com/ulikunitz/xz/compare/v0.5.7...v0.5.8)
-- github.com/vbauerster/mpb/v5: [v5.2.2 → v5.3.0](https://github.com/vbauerster/mpb/v5/compare/v5.2.2...v5.3.0)
+- github.com/ulikunitz/xz: [v0.5.7 → v0.5.9](https://github.com/ulikunitz/xz/compare/v0.5.7...v0.5.9)
+- github.com/vbauerster/mpb/v5: [v5.2.2 → v5.4.0](https://github.com/vbauerster/mpb/v5/compare/v5.2.2...v5.4.0)
 - github.com/vishvananda/netns: [52d707b → db3c7e5](https://github.com/vishvananda/netns/compare/52d707b...db3c7e5)
 - github.com/yuin/goldmark: [v1.1.32 → v1.2.1](https://github.com/yuin/goldmark/compare/v1.1.32...v1.2.1)
 - go.etcd.io/etcd: 18dfb9c → dd1b699
@@ -250,7 +254,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - golang.org/x/term: ad39bd3 → 7de9c90
 - golang.org/x/text: v0.3.3 → v0.3.4
 - golang.org/x/time: 555d28b → 3af7569
-- golang.org/x/tools: c1934b7 → 079ba7b
+- golang.org/x/tools: c1934b7 → 113979e
 - golang.org/x/xerrors: 9bdfabe → 5ec99f8
 - google.golang.org/api: v0.21.0 → v0.35.0
 - google.golang.org/appengine: v1.6.5 → v1.6.6
