--- a/v1.20.0.md
+++ b/v1.20.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.20.0
 
 The release notes have been generated for the commit range
-[v1.19.0...8921e00](https://github.com/cri-o/cri-o/compare/v1.19.0...8921e00fdb188446b1cde28d06f8e3d6893f1e79) on Tue, 09 Feb 2021 01:32:28 UTC.
+[v1.19.0...fdbdf43](https://github.com/cri-o/cri-o/compare/v1.19.0...fdbdf433cc6df7195d408d16249039aeaa2a64b7) on Tue, 09 Feb 2021 23:36:44 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-8921e00fd.tar.gz][0]
+[crio-fdbdf433c.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-8921e00fd.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-fdbdf433c.tar.gz
 
 ## Changelog since v1.19.0
 
@@ -68,6 +68,7 @@ Download the static release bundle via our Google Cloud Bucket:
 #### Other (Cleanup or Flake)
  - Changed the output of the printed seccomp profile to JSON instead of the struct. The profile will be only printed on CRI-O startup and if the `--log-level`/`log_level` is set to `trace`. ([#4158](https://github.com/cri-o/cri-o/pull/4158), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed a bug where a container creation failure caused that container to leak in the runtime ([#4198](https://github.com/cri-o/cri-o/pull/4198), [@haircommander](https://github.com/haircommander))
+ - Log the container stop timeout at default log level ([#4554](https://github.com/cri-o/cri-o/pull/4554), [@mrunalp](https://github.com/mrunalp))
 
 #### Uncategorized
  - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4496](https://github.com/cri-o/cri-o/pull/4496), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
@@ -80,7 +81,7 @@ Download the static release bundle via our Google Cloud Bucket:
  - The `registries` option from crio.conf(5) has been deprecated in favour of using containers-registries.conf(5) for configuring unqualified-search registries.  The `registries` option will be removed from CRI-O 1.21. ([#4477](https://github.com/cri-o/cri-o/pull/4477), [@vrothberg](https://github.com/vrothberg))
  - Update broken link for podman tutorial ([#4179](https://github.com/cri-o/cri-o/pull/4179), [@lovebaby979](https://github.com/lovebaby979))
  - Update broken link for tutorials ([#4180](https://github.com/cri-o/cri-o/pull/4180), [@lovebaby979](https://github.com/lovebaby979))
- - Update nix pin with `make nixpkgs` ([#4249](https://github.com/cri-o/cri-o/pull/4249), [@hswong3i](https://github.com/hswong3i))
+ - Update nix pin with `make nixpkgs` ([#4347](https://github.com/cri-o/cri-o/pull/4347), [@hswong3i](https://github.com/hswong3i))
 
 ## Dependencies
 
