--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -13,14 +13,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...7ca35f0](https://github.com/cri-o/cri-o/compare/v1.20.0...7ca35f0f016dc28f0d974fff6c9f77b1092eaa3a) on Mon, 15 Feb 2021 21:20:28 UTC.
+[v1.20.0...4f9a59b](https://github.com/cri-o/cri-o/compare/v1.20.0...4f9a59b1894e743e9b12164af0f10476136ee8ef) on Mon, 15 Feb 2021 23:22:41 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-7ca35f0f0.tar.gz][0]
+[crio-4f9a59b18.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-7ca35f0f0.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-4f9a59b18.tar.gz
 
 ## Changelog since v1.20.0
 
@@ -38,6 +38,7 @@ Download the static release bundle via our Google Cloud Bucket:
 #### Bug or Regression
  - Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4563](https://github.com/cri-o/cri-o/pull/4563), [@haircommander](https://github.com/haircommander))
  - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4468](https://github.com/cri-o/cri-o/pull/4468), [@haircommander](https://github.com/haircommander))
+ - Fix running privileged systemd containers with bidirectional mounts ([#4575](https://github.com/cri-o/cri-o/pull/4575), [@giuseppe](https://github.com/giuseppe))
  - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4530](https://github.com/cri-o/cri-o/pull/4530), [@haircommander](https://github.com/haircommander))
  - Ingress/Egress burst limit is now set slightly below 4GB, which properly sets 4GB as the upper limit of burst ([#4348](https://github.com/cri-o/cri-o/pull/4348), [@zizon](https://github.com/zizon))
 
