--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -13,14 +13,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...d522b73](https://github.com/cri-o/cri-o/compare/v1.20.0...d522b730027f7b4f0a8dd7adce073fd145210be5) on Wed, 17 Feb 2021 14:27:40 UTC.
+[v1.20.0...7373da2](https://github.com/cri-o/cri-o/compare/v1.20.0...7373da21056bd176910da32c5b253f1e25031000) on Wed, 17 Feb 2021 16:45:24 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-d522b7300.tar.gz][0]
+[crio-7373da210.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-d522b7300.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-7373da210.tar.gz
 
 ## Changelog since v1.20.0
 
@@ -28,6 +28,8 @@ Download the static release bundle via our Google Cloud Bucket:
 
 #### Feature
  - Added `crio-status.8` man page to static release bundle ([#4510](https://github.com/cri-o/cri-o/pull/4510), [@saschagrunert](https://github.com/saschagrunert))
+ - Added feature to allow the OCI seccomp BPF hook to trace containers into dedicated files by
+  using the annotation key `io.containers.trace-syscall/container-name` ([#4544](https://github.com/cri-o/cri-o/pull/4544), [@saschagrunert](https://github.com/saschagrunert))
  - Bump containers image to v5.10.1 ([#4519](https://github.com/cri-o/cri-o/pull/4519), [@QiWang19](https://github.com/QiWang19))
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a bug where pods with `hostNetwork: true` couldn't have ports forwarded from them when drop_infra_ctr=true ([#4495](https://github.com/cri-o/cri-o/pull/4495), [@haircommander](https://github.com/haircommander))
