Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -4,6 +4,7 @@
     - [Changes by Kind](#changes-by-kind)
       - [Feature](#feature)
       - [Bug or Regression](#bug-or-regression)
+      - [Other (Cleanup or Flake)](#other-cleanup-or-flake)
       - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
     - [Added](#added)
@@ -13,14 +14,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...7373da2](https://github.com/cri-o/cri-o/compare/v1.20.0...7373da21056bd176910da32c5b253f1e25031000) on Wed, 17 Feb 2021 16:45:24 UTC.
+[v1.20.0...6b6d9ed](https://github.com/cri-o/cri-o/compare/v1.20.0...6b6d9ed8e376cc6531ec77fee0a39f9f81f7c440) on Thu, 18 Feb 2021 10:20:31 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-7373da210.tar.gz][0]
+[crio-6b6d9ed8e.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-7373da210.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-6b6d9ed8e.tar.gz
 
 ## Changelog since v1.20.0
 
@@ -43,6 +44,9 @@ Download the static release bundle via our Google Cloud Bucket:
  - Fix running privileged systemd containers with bidirectional mounts ([#4575](https://github.com/cri-o/cri-o/pull/4575), [@giuseppe](https://github.com/giuseppe))
  - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4530](https://github.com/cri-o/cri-o/pull/4530), [@haircommander](https://github.com/haircommander))
  - Ingress/Egress burst limit is now set slightly below 4GB, which properly sets 4GB as the upper limit of burst ([#4348](https://github.com/cri-o/cri-o/pull/4348), [@zizon](https://github.com/zizon))
+
+#### Other (Cleanup or Flake)
+ - Add clean_shutdown_file option to allow crio/crio wipe to verify crio had time to shutdown cleanly ([#3999](https://github.com/cri-o/cri-o/pull/3999), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
  - Allows users to set stream timeout from config ([#4529](https://github.com/cri-o/cri-o/pull/4529), [@wgahnagl](https://github.com/wgahnagl))
