Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...43f2c29](https://github.com/cri-o/cri-o/compare/v1.20.0...43f2c2942b63574a212402c381efc664a2e8ef1d) on Fri, 19 Feb 2021 19:02:08 UTC.
+[v1.20.0...e54c506](https://github.com/cri-o/cri-o/compare/v1.20.0...e54c5068e1178d2b494a07be4237b0d82ab89b14) on Mon, 22 Feb 2021 18:18:24 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-43f2c2942.tar.gz][0]
+[crio-e54c5068e.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-43f2c2942.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-e54c5068e.tar.gz
 
 ## Changelog since v1.20.0
 
@@ -53,6 +53,7 @@ Download the static release bundle via our Google Cloud Bucket:
  - CRI-O now supports short-name aliases which can be configured in the `containers-registries.conf(5)` configuration files.  Please refer to the following article for further details on short-name aliases: www.redhat.com/sysadmin/container-image-short-names
   
   The `registries` option in the crio.conf has been deprecated and takes no effect any more.  CRI-O will warn when loading the config and note that `containers-registries.conf(5)` should be used instead for configuring unqualified-search registries. ([#4455](https://github.com/cri-o/cri-o/pull/4455), [@vrothberg](https://github.com/vrothberg))
+ - Fix OOMs when using crun together with CPU Manager ([#4592](https://github.com/cri-o/cri-o/pull/4592), [@odinuge](https://github.com/odinuge))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4461](https://github.com/cri-o/cri-o/pull/4461), [@QiWang19](https://github.com/QiWang19))
  - Set conmon scope KillSignal to SIGPIPE ([#4560](https://github.com/cri-o/cri-o/pull/4560), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
