Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...8d2de74](https://github.com/cri-o/cri-o/compare/v1.20.0...8d2de7478cab595944c8c5fa8a7b151f46e602f4) on Mon, 01 Mar 2021 14:20:42 UTC.
+[v1.20.0...47eaef2](https://github.com/cri-o/cri-o/compare/v1.20.0...47eaef2b66de8cd758215d07badde8c09d9a1fa4) on Mon, 01 Mar 2021 15:46:42 UTC.
 
 ## Downloads
 
 Download the static release bundle via our Google Cloud Bucket:
-[crio-8d2de7478.tar.gz][0]
+[crio-47eaef2b6.tar.gz][0]
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-8d2de7478.tar.gz
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-47eaef2b6.tar.gz
 
 ## Changelog since v1.20.0
 
@@ -56,6 +56,12 @@ Download the static release bundle via our Google Cloud Bucket:
  - Fix OOMs when using crun together with CPU Manager ([#4592](https://github.com/cri-o/cri-o/pull/4592), [@odinuge](https://github.com/odinuge))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4461](https://github.com/cri-o/cri-o/pull/4461), [@QiWang19](https://github.com/QiWang19))
  - Set conmon scope KillSignal to SIGPIPE ([#4560](https://github.com/cri-o/cri-o/pull/4560), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - This new release of ocicrypt contains new usable interfaces and thus is a new minor number. This issue details the notable features added as well as a checklist before making a new release that will be used by consuming projects. Target date for completion is 24th January.
+  
+  Changes
+  There are several significant changes in release 1.1.0, this includes:
+      - Experimental PKCS11 support enabled via ENV variable
+      - Custom keyprovider support enabled via ENV variable ([#4537](https://github.com/cri-o/cri-o/pull/4537), [@pravinrajr9](https://github.com/pravinrajr9))
  - Update nix pin with `make nixpkgs` ([#4521](https://github.com/cri-o/cri-o/pull/4521), [@hswong3i](https://github.com/hswong3i))
  - When using high performance hooks, CRI-O now restarts the irqbalance service after updating the irqbalance config file. rather than calling `irqbalance --oneshot`. A new config value `irqbalance_config_file` has been introduced to configure the file to update with `IRQBALANCE_BANNED_CPUS` settings. The default of this config value is `/etc/sysconfig/irqbalance`, but must be set to `/etc/default/irqbalance` for Ubuntu-like distributions. ([#4441](https://github.com/cri-o/cri-o/pull/4441), [@pperiyasamy](https://github.com/pperiyasamy))
 
@@ -67,7 +73,9 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/juju/ansiterm: [720a095](https://github.com/juju/ansiterm/tree/720a095)
 - github.com/lunixbochs/vtclean: [2d01aac](https://github.com/lunixbochs/vtclean/tree/2d01aac)
 - github.com/manifoldco/promptui: [v0.8.0](https://github.com/manifoldco/promptui/tree/v0.8.0)
+- github.com/miekg/pkcs11: [v1.0.3](https://github.com/miekg/pkcs11/tree/v1.0.3)
 - github.com/shirou/gopsutil/v3: [v3.20.12](https://github.com/shirou/gopsutil/v3/tree/v3.20.12)
+- github.com/stefanberger/go-pkcs11uri: [78d3cae](https://github.com/stefanberger/go-pkcs11uri/tree/78d3cae)
 
 ### Changed
 - cloud.google.com/go/logging: v1.1.0 → v1.1.2
@@ -79,6 +87,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - github.com/cilium/ebpf: [4032b1d → v0.2.0](https://github.com/cilium/ebpf/compare/4032b1d...v0.2.0)
 - github.com/containerd/cgroups: [0dbf7f0 → 4cbc285](https://github.com/containerd/cgroups/compare/0dbf7f0...4cbc285)
 - github.com/containers/image/v5: [v5.7.0 → v5.10.1](https://github.com/containers/image/v5/compare/v5.7.0...v5.10.1)
+- github.com/containers/ocicrypt: [v1.0.3 → v1.1.0](https://github.com/containers/ocicrypt/compare/v1.0.3...v1.1.0)
 - github.com/containers/storage: [v1.24.0 → v1.24.5](https://github.com/containers/storage/compare/v1.24.0...v1.24.5)
 - github.com/go-ole/go-ole: [v1.2.1 → v1.2.4](https://github.com/go-ole/go-ole/compare/v1.2.1...v1.2.4)
 - github.com/gogo/protobuf: [v1.3.1 → v1.3.2](https://github.com/gogo/protobuf/compare/v1.3.1...v1.3.2)
@@ -113,6 +122,7 @@ Download the static release bundle via our Google Cloud Bucket:
 - golang.org/x/tools: 079ba7b → e2f9c7f
 - google.golang.org/api: v0.35.0 → v0.36.0
 - google.golang.org/appengine: v1.6.6 → v1.6.7
+- gopkg.in/square/go-jose.v2: v2.3.1 → v2.5.1
 - gopkg.in/yaml.v2: v2.3.0 → v2.4.0
 - honnef.co/go/tools: v0.0.1-2020.1.5 → v0.0.1-2020.1.4
 - k8s.io/release: v0.6.0 → v0.7.0
