Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...47eaef2](https://github.com/cri-o/cri-o/compare/v1.20.0...47eaef2b66de8cd758215d07badde8c09d9a1fa4) on Mon, 01 Mar 2021 15:46:42 UTC.
+[v1.20.0...c49f180](https://github.com/cri-o/cri-o/compare/v1.20.0...c49f180264dd299cb16345dec0a18daaac326da3) on Mon, 01 Mar 2021 19:49:43 UTC.
 
 ## Downloads
 
-Download the static release bundle via our Google Cloud Bucket:
-[crio-47eaef2b6.tar.gz][0]
+Download one of our static release bundles via our Google Cloud Bucket:
 
-[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-47eaef2b6.tar.gz
+- [cri-o.amd64.c49f180264dd299cb16345dec0a18daaac326da3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.c49f180264dd299cb16345dec0a18daaac326da3.tar.gz)
+- [cri-o.arm64.c49f180264dd299cb16345dec0a18daaac326da3.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.c49f180264dd299cb16345dec0a18daaac326da3.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -29,6 +29,14 @@ Download the static release bundle via our Google Cloud Bucket:
 
 #### Feature
  - Added `crio-status.8` man page to static release bundle ([#4510](https://github.com/cri-o/cri-o/pull/4510), [@saschagrunert](https://github.com/saschagrunert))
+ - Added arm64 variant to static binary bundle. The bundle is now available via the URL
+  `https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.$ARCH.$VERSION.tar.gz`,
+  where `$ARCH` can be `amd64` or `arm64` and `$VERSION` a tag or full length git SHA.
+  Beside that, we provide a new installation script
+  `curl https://raw.githubusercontent.com/cri-o/cri-o/master/scripts/get | bash`.
+  For this script, it is also possible to pass the architecture and version as arguments:
+  `get [amd64|arm64] [VERSION|SHA]`.
+  The static binary bundle now uses crun as default container runtime for CRI-O. ([#4552](https://github.com/cri-o/cri-o/pull/4552), [@saschagrunert](https://github.com/saschagrunert))
  - Added feature to allow the OCI seccomp BPF hook to trace containers into dedicated files by
   using the annotation key `io.containers.trace-syscall/container-name` ([#4544](https://github.com/cri-o/cri-o/pull/4544), [@saschagrunert](https://github.com/saschagrunert))
  - Bump containers image to v5.10.1 ([#4519](https://github.com/cri-o/cri-o/pull/4519), [@QiWang19](https://github.com/QiWang19))
