--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -14,14 +14,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...9ce5dd6](https://github.com/cri-o/cri-o/compare/v1.20.0...9ce5dd6bb2f98d1bfbc273fa53a9f6397bb84a47) on Tue, 02 Mar 2021 10:19:15 UTC.
+[v1.20.0...091b020](https://github.com/cri-o/cri-o/compare/v1.20.0...091b0208c3a4659ad5f2f66011a7be012d51d775) on Tue, 02 Mar 2021 16:29:55 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.9ce5dd6bb2f98d1bfbc273fa53a9f6397bb84a47.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.9ce5dd6bb2f98d1bfbc273fa53a9f6397bb84a47.tar.gz)
-- [cri-o.arm64.9ce5dd6bb2f98d1bfbc273fa53a9f6397bb84a47.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.9ce5dd6bb2f98d1bfbc273fa53a9f6397bb84a47.tar.gz)
+- [cri-o.amd64.091b0208c3a4659ad5f2f66011a7be012d51d775.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.091b0208c3a4659ad5f2f66011a7be012d51d775.tar.gz)
+- [cri-o.arm64.091b0208c3a4659ad5f2f66011a7be012d51d775.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.091b0208c3a4659ad5f2f66011a7be012d51d775.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -55,6 +55,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Other (Cleanup or Flake)
  - Add clean_shutdown_file option to allow crio/crio wipe to verify crio had time to shutdown cleanly ([#3999](https://github.com/cri-o/cri-o/pull/3999), [@haircommander](https://github.com/haircommander))
+ - Add metric to grab latency for individual CRI calls. ([#4598](https://github.com/cri-o/cri-o/pull/4598), [@umohnani8](https://github.com/umohnani8))
 
 #### Uncategorized
  - Allows users to set stream timeout from config ([#4529](https://github.com/cri-o/cri-o/pull/4529), [@wgahnagl](https://github.com/wgahnagl))
