Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.20.0](#changelog-since-v1200)
     - [Changes by Kind](#changes-by-kind)
       - [Feature](#feature)
+      - [Documentation](#documentation)
       - [Bug or Regression](#bug-or-regression)
       - [Other (Cleanup or Flake)](#other-cleanup-or-flake)
       - [Uncategorized](#uncategorized)
@@ -14,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...791c7f2](https://github.com/cri-o/cri-o/compare/v1.20.0...791c7f23f0bdf7b1388d111e7d373d9cee10a5db) on Thu, 04 Mar 2021 18:12:39 UTC.
+[v1.20.0...342d049](https://github.com/cri-o/cri-o/compare/v1.20.0...342d0497bf72ee8aaea6ed5761fa74acf4cc4c29) on Thu, 04 Mar 2021 19:27:45 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.791c7f23f0bdf7b1388d111e7d373d9cee10a5db.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.791c7f23f0bdf7b1388d111e7d373d9cee10a5db.tar.gz)
-- [cri-o.arm64.791c7f23f0bdf7b1388d111e7d373d9cee10a5db.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.791c7f23f0bdf7b1388d111e7d373d9cee10a5db.tar.gz)
+- [cri-o.amd64.342d0497bf72ee8aaea6ed5761fa74acf4cc4c29.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.342d0497bf72ee8aaea6ed5761fa74acf4cc4c29.tar.gz)
+- [cri-o.arm64.342d0497bf72ee8aaea6ed5761fa74acf4cc4c29.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.342d0497bf72ee8aaea6ed5761fa74acf4cc4c29.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -45,6 +46,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - It is possible to override cgroup v2 unified configuration through the io.kubernetes.cri-o.UnifiedCgroup.$CTR_NAME annotation ([#4479](https://github.com/cri-o/cri-o/pull/4479), [@giuseppe](https://github.com/giuseppe))
  - Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4459](https://github.com/cri-o/cri-o/pull/4459), [@cynepco3hahue](https://github.com/cynepco3hahue))
  - Support enabling pprof profile over CRI-O's unix socket ([#4514](https://github.com/cri-o/cri-o/pull/4514), [@mrunalp](https://github.com/mrunalp))
+
+#### Documentation
+ - The installed cri-o.service file now attempts to be run before kubelet.service ([#4443](https://github.com/cri-o/cri-o/pull/4443), [@haircommander](https://github.com/haircommander))
 
 #### Bug or Regression
  - Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4563](https://github.com/cri-o/cri-o/pull/4563), [@haircommander](https://github.com/haircommander))
