Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...c0f293a](https://github.com/cri-o/cri-o/compare/v1.20.0...c0f293ad505fb79a41f2f6e81782b6b043d9a975) on Fri, 05 Mar 2021 16:12:50 UTC.
+[v1.20.0...c61c691](https://github.com/cri-o/cri-o/compare/v1.20.0...c61c691b9c6d00ab18268d1a5d53d2b9c2dd2702) on Fri, 05 Mar 2021 17:59:55 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.c0f293ad505fb79a41f2f6e81782b6b043d9a975.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.c0f293ad505fb79a41f2f6e81782b6b043d9a975.tar.gz)
-- [cri-o.arm64.c0f293ad505fb79a41f2f6e81782b6b043d9a975.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.c0f293ad505fb79a41f2f6e81782b6b043d9a975.tar.gz)
+- [cri-o.amd64.c61c691b9c6d00ab18268d1a5d53d2b9c2dd2702.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.c61c691b9c6d00ab18268d1a5d53d2b9c2dd2702.tar.gz)
+- [cri-o.arm64.c61c691b9c6d00ab18268d1a5d53d2b9c2dd2702.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.c61c691b9c6d00ab18268d1a5d53d2b9c2dd2702.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -45,6 +45,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where pods with `hostNetwork: true` couldn't have ports forwarded from them when drop_infra_ctr=true ([#4495](https://github.com/cri-o/cri-o/pull/4495), [@haircommander](https://github.com/haircommander))
  - It is possible to override cgroup v2 unified configuration through the io.kubernetes.cri-o.UnifiedCgroup.$CTR_NAME annotation ([#4479](https://github.com/cri-o/cri-o/pull/4479), [@giuseppe](https://github.com/giuseppe))
  - Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4459](https://github.com/cri-o/cri-o/pull/4459), [@cynepco3hahue](https://github.com/cynepco3hahue))
+ - Support Container Runtime Interface (CRI) security profiles for seccomp, which has been introduced with Kubernetes v1.20.0 and the graduation of the CRI. ([#4358](https://github.com/cri-o/cri-o/pull/4358), [@saschagrunert](https://github.com/saschagrunert))
  - Support enabling pprof profile over CRI-O's unix socket ([#4514](https://github.com/cri-o/cri-o/pull/4514), [@mrunalp](https://github.com/mrunalp))
 
 #### Documentation
