--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,20 +15,23 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...da128d6](https://github.com/cri-o/cri-o/compare/v1.20.0...da128d610eb92314cd4fe23f8f006aee95889576) on Mon, 08 Mar 2021 16:16:13 UTC.
+[v1.20.0...8446438](https://github.com/cri-o/cri-o/compare/v1.20.0...84464383a1c12a5cde27a4afc5a2b1f4eaa6b3ce) on Mon, 08 Mar 2021 22:28:18 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.da128d610eb92314cd4fe23f8f006aee95889576.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.da128d610eb92314cd4fe23f8f006aee95889576.tar.gz)
-- [cri-o.arm64.da128d610eb92314cd4fe23f8f006aee95889576.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.da128d610eb92314cd4fe23f8f006aee95889576.tar.gz)
+- [cri-o.amd64.84464383a1c12a5cde27a4afc5a2b1f4eaa6b3ce.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.84464383a1c12a5cde27a4afc5a2b1f4eaa6b3ce.tar.gz)
+- [cri-o.arm64.84464383a1c12a5cde27a4afc5a2b1f4eaa6b3ce.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.84464383a1c12a5cde27a4afc5a2b1f4eaa6b3ce.tar.gz)
 
 ## Changelog since v1.20.0
 
 ### Changes by Kind
 
 #### Feature
+ - A new CLI option `--registries-conf-dir` is added which allows users to select
+  a specific `registries.conf.d(5)` path which will be used instead of the user or
+  system default paths. ([#4595](https://github.com/cri-o/cri-o/pull/4595), [@maybe-sybr](https://github.com/maybe-sybr))
  - Added `crio-status.8` man page to static release bundle ([#4510](https://github.com/cri-o/cri-o/pull/4510), [@saschagrunert](https://github.com/saschagrunert))
  - Added arm64 variant to static binary bundle. The bundle is now available via the URL
   `https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.$ARCH.$VERSION.tar.gz`,
