Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...da707ac](https://github.com/cri-o/cri-o/compare/v1.20.0...da707ac1ee3d634224ea5cdbe6d02abe7bad34fe) on Tue, 09 Mar 2021 18:23:43 UTC.
+[v1.20.0...1105977](https://github.com/cri-o/cri-o/compare/v1.20.0...1105977cbcddca46f875ac6cd1b39fbdd75640b9) on Tue, 09 Mar 2021 19:57:33 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.da707ac1ee3d634224ea5cdbe6d02abe7bad34fe.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.da707ac1ee3d634224ea5cdbe6d02abe7bad34fe.tar.gz)
-- [cri-o.arm64.da707ac1ee3d634224ea5cdbe6d02abe7bad34fe.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.da707ac1ee3d634224ea5cdbe6d02abe7bad34fe.tar.gz)
+- [cri-o.amd64.1105977cbcddca46f875ac6cd1b39fbdd75640b9.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.1105977cbcddca46f875ac6cd1b39fbdd75640b9.tar.gz)
+- [cri-o.arm64.1105977cbcddca46f875ac6cd1b39fbdd75640b9.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.1105977cbcddca46f875ac6cd1b39fbdd75640b9.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -70,6 +70,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - CRI-O now supports short-name aliases which can be configured in the `containers-registries.conf(5)` configuration files.  Please refer to the following article for further details on short-name aliases: www.redhat.com/sysadmin/container-image-short-names
   
   The `registries` option in the crio.conf has been deprecated and takes no effect any more.  CRI-O will warn when loading the config and note that `containers-registries.conf(5)` should be used instead for configuring unqualified-search registries. ([#4455](https://github.com/cri-o/cri-o/pull/4455), [@vrothberg](https://github.com/vrothberg))
+ - Crio adds info level log of the physical image source. ([#4438](https://github.com/cri-o/cri-o/pull/4438), [@QiWang19](https://github.com/QiWang19))
  - Fix OOMs when using crun together with CPU Manager ([#4592](https://github.com/cri-o/cri-o/pull/4592), [@odinuge](https://github.com/odinuge))
  - Fixed a bug where image authentication failed from not finding the auth file. ([#4461](https://github.com/cri-o/cri-o/pull/4461), [@QiWang19](https://github.com/QiWang19))
  - Set conmon scope KillSignal to SIGPIPE ([#4560](https://github.com/cri-o/cri-o/pull/4560), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
