--- a/v1.20.1.md
+++ b/v1.20.1.md
@@ -1,38 +1,56 @@
-# Release notes for v1.20.1
+- [CRI-O v1.20.1](#cri-o-v1201)
+  - [Downloads](#downloads)
+  - [Changelog since v1.20.0](#changelog-since-v1200)
+    - [Changes by Kind](#changes-by-kind)
+      - [Feature](#feature)
+      - [Bug or Regression](#bug-or-regression)
+      - [Other (Cleanup or Flake)](#other-cleanup-or-flake)
+      - [Uncategorized](#uncategorized)
+  - [Dependencies](#dependencies)
+    - [Added](#added)
+    - [Changed](#changed)
+    - [Removed](#removed)
 
-[Documentation](https://docs.k8s.io/docs/home)
-# Changelog since v1.20.0
+# CRI-O v1.20.1
 
-## Changes by Kind
+The release notes have been generated for the commit range
+[v1.20.0...v1.20.1](https://github.com/cri-o/cri-o/compare/v1.20.0...v1.20.1) on Fri, 12 Mar 2021 14:48:59 EST.
 
-### Feature
+## Downloads
 
-- Bump containers image to v5.10.1 ([#4531](https://github.com/cri-o/cri-o/pull/4531), [@QiWang19](https://github.com/QiWang19))
-- Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4469](https://github.com/cri-o/cri-o/pull/4469), [@haircommander](https://github.com/haircommander))
-- Support enabling pprof profile over CRI-O's unix socket ([#4520](https://github.com/cri-o/cri-o/pull/4520), [@mrunalp](https://github.com/mrunalp))
+Download the static release bundle via our Google Cloud Bucket:
+[crio-v1.20.1.tar.gz][0]
 
-### Bug or Regression
+[0]: https://storage.googleapis.com/k8s-conform-cri-o/artifacts/crio-v1.20.1.tar.gz
 
-- Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4535](https://github.com/cri-o/cri-o/pull/4535), [@haircommander](https://github.com/haircommander))
+## Changelog since v1.20.0
 
-### Other (Cleanup or Flake)
+### Changes by Kind
 
-- Log the container stop timeout at default log level ([#4554](https://github.com/cri-o/cri-o/pull/4554), [@mrunalp](https://github.com/mrunalp))
+#### Feature
+ - Bump containers image to v5.10.1 ([#4531](https://github.com/cri-o/cri-o/pull/4531), [@QiWang19](https://github.com/QiWang19))
+ - Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4469](https://github.com/cri-o/cri-o/pull/4469), [@haircommander](https://github.com/haircommander))
+ - Support enabling pprof profile over CRI-O's unix socket ([#4520](https://github.com/cri-o/cri-o/pull/4520), [@mrunalp](https://github.com/mrunalp))
 
-### Uncategorized
+#### Bug or Regression
+ - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4535](https://github.com/cri-o/cri-o/pull/4535), [@haircommander](https://github.com/haircommander))
 
-- Add metric to grab latency for individual CRI calls. ([#4611](https://github.com/cri-o/cri-o/pull/4611), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
-- Allows session timeout to to be set as a config ([#4565](https://github.com/cri-o/cri-o/pull/4565), [@wgahnagl](https://github.com/wgahnagl))
-- Crio adds info level log of the physical image source. ([#4536](https://github.com/cri-o/cri-o/pull/4536), [@QiWang19](https://github.com/QiWang19))
-- Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4570](https://github.com/cri-o/cri-o/pull/4570), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
-- Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4496](https://github.com/cri-o/cri-o/pull/4496), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
-- Fix running privileged systemd containers with bidirectional mounts ([#4577](https://github.com/cri-o/cri-o/pull/4577), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
-- Fixed a bug where image authentication failed from not finding the auth file. ([#4462](https://github.com/cri-o/cri-o/pull/4462), [@QiWang19](https://github.com/QiWang19))
-- Revert systemd KillMode to control-group (default) ([#4547](https://github.com/cri-o/cri-o/pull/4547), [@mrunalp](https://github.com/mrunalp))
-- Set conmon scope KillSignal to SIGPIPE ([#4546](https://github.com/cri-o/cri-o/pull/4546), [@mrunalp](https://github.com/mrunalp))
-- Set systemd KillMode to mixed for container scopes modifying behavior on node shutdown ([#4539](https://github.com/cri-o/cri-o/pull/4539), [@mrunalp](https://github.com/mrunalp))
-- The `registries` option from crio.conf(5) has been deprecated in favour of using containers-registries.conf(5) for configuring unqualified-search registries.  The `registries` option will be removed from CRI-O 1.21. ([#4477](https://github.com/cri-o/cri-o/pull/4477), [@vrothberg](https://github.com/vrothberg))
-- The installed cri-o.service file now attempts to be run before kubelet.service ([#4635](https://github.com/cri-o/cri-o/pull/4635), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+#### Other (Cleanup or Flake)
+ - Log the container stop timeout at default log level ([#4554](https://github.com/cri-o/cri-o/pull/4554), [@mrunalp](https://github.com/mrunalp))
+
+#### Uncategorized
+ - Add metric to grab latency for individual CRI calls. ([#4611](https://github.com/cri-o/cri-o/pull/4611), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Allows session timeout to to be set as a config ([#4565](https://github.com/cri-o/cri-o/pull/4565), [@wgahnagl](https://github.com/wgahnagl))
+ - Crio adds info level log of the physical image source. ([#4536](https://github.com/cri-o/cri-o/pull/4536), [@QiWang19](https://github.com/QiWang19))
+ - Fix a bug where CollectMode wouldn't be set if the feature was backported to systemd (in RHEL/CentOS 7, for instance) ([#4570](https://github.com/cri-o/cri-o/pull/4570), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where containers didn't have a finished time set when using the "vm" style runtimes. ([#4496](https://github.com/cri-o/cri-o/pull/4496), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix running privileged systemd containers with bidirectional mounts ([#4577](https://github.com/cri-o/cri-o/pull/4577), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fixed a bug where image authentication failed from not finding the auth file. ([#4462](https://github.com/cri-o/cri-o/pull/4462), [@QiWang19](https://github.com/QiWang19))
+ - Revert systemd KillMode to control-group (default) ([#4547](https://github.com/cri-o/cri-o/pull/4547), [@mrunalp](https://github.com/mrunalp))
+ - Set conmon scope KillSignal to SIGPIPE ([#4546](https://github.com/cri-o/cri-o/pull/4546), [@mrunalp](https://github.com/mrunalp))
+ - Set systemd KillMode to mixed for container scopes modifying behavior on node shutdown ([#4539](https://github.com/cri-o/cri-o/pull/4539), [@mrunalp](https://github.com/mrunalp))
+ - The `registries` option from crio.conf(5) has been deprecated in favour of using containers-registries.conf(5) for configuring unqualified-search registries.  The `registries` option will be removed from CRI-O 1.21. ([#4477](https://github.com/cri-o/cri-o/pull/4477), [@vrothberg](https://github.com/vrothberg))
+ - The installed cri-o.service file now attempts to be run before kubelet.service ([#4635](https://github.com/cri-o/cri-o/pull/4635), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
