Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...1e86661](https://github.com/cri-o/cri-o/compare/v1.20.0...1e86661fb57786ba17db0573dd3c75270b698395) on Tue, 16 Mar 2021 10:12:17 UTC.
+[v1.20.0...69cc531](https://github.com/cri-o/cri-o/compare/v1.20.0...69cc531b43d568c12353264224348a2acbc8dbe0) on Tue, 16 Mar 2021 13:52:16 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.1e86661fb57786ba17db0573dd3c75270b698395.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.1e86661fb57786ba17db0573dd3c75270b698395.tar.gz)
-- [cri-o.arm64.1e86661fb57786ba17db0573dd3c75270b698395.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.1e86661fb57786ba17db0573dd3c75270b698395.tar.gz)
+- [cri-o.amd64.69cc531b43d568c12353264224348a2acbc8dbe0.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.69cc531b43d568c12353264224348a2acbc8dbe0.tar.gz)
+- [cri-o.arm64.69cc531b43d568c12353264224348a2acbc8dbe0.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.69cc531b43d568c12353264224348a2acbc8dbe0.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -47,6 +47,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Changed `VersionResponse.RuntimeApiVersion` to return either the `v1alpha2` or `v1` CRI API version ([#4473](https://github.com/cri-o/cri-o/pull/4473), [@saschagrunert](https://github.com/saschagrunert))
  - Fix a bug where pods with `hostNetwork: true` couldn't have ports forwarded from them when drop_infra_ctr=true ([#4495](https://github.com/cri-o/cri-o/pull/4495), [@haircommander](https://github.com/haircommander))
  - It is possible to override cgroup v2 unified configuration through the io.kubernetes.cri-o.UnifiedCgroup.$CTR_NAME annotation ([#4479](https://github.com/cri-o/cri-o/pull/4479), [@giuseppe](https://github.com/giuseppe))
+ - Port-forward works for IPv6 only pods ([#4639](https://github.com/cri-o/cri-o/pull/4639), [@aojea](https://github.com/aojea))
  - Provide a new configuration flag to specify CPUs that will be used to run infra containers ([#4459](https://github.com/cri-o/cri-o/pull/4459), [@cynepco3hahue](https://github.com/cynepco3hahue))
  - Support Container Runtime Interface (CRI) security profiles for seccomp, which has been introduced with Kubernetes v1.20.0 and the graduation of the CRI. ([#4358](https://github.com/cri-o/cri-o/pull/4358), [@saschagrunert](https://github.com/saschagrunert))
  - Support enabling pprof profile over CRI-O's unix socket ([#4514](https://github.com/cri-o/cri-o/pull/4514), [@mrunalp](https://github.com/mrunalp))
