Update release notes

--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...4fff699](https://github.com/cri-o/cri-o/compare/v1.20.0...4fff6999c779dd865e9a6d4100de7b65a7b3a5c7) on Thu, 18 Mar 2021 08:31:14 UTC.
+[v1.20.0...f2f339d](https://github.com/cri-o/cri-o/compare/v1.20.0...f2f339d1489e7774e4c2b5923b04fcbed768cd86) on Sat, 20 Mar 2021 19:38:48 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.4fff6999c779dd865e9a6d4100de7b65a7b3a5c7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.4fff6999c779dd865e9a6d4100de7b65a7b3a5c7.tar.gz)
-- [cri-o.arm64.4fff6999c779dd865e9a6d4100de7b65a7b3a5c7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.4fff6999c779dd865e9a6d4100de7b65a7b3a5c7.tar.gz)
+- [cri-o.amd64.f2f339d1489e7774e4c2b5923b04fcbed768cd86.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.f2f339d1489e7774e4c2b5923b04fcbed768cd86.tar.gz)
+- [cri-o.arm64.f2f339d1489e7774e4c2b5923b04fcbed768cd86.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.f2f339d1489e7774e4c2b5923b04fcbed768cd86.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -61,6 +61,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix running privileged systemd containers with bidirectional mounts ([#4575](https://github.com/cri-o/cri-o/pull/4575), [@giuseppe](https://github.com/giuseppe))
  - Fixed a bug that could cause CRI-O to segfault when a node is under heavy load ([#4530](https://github.com/cri-o/cri-o/pull/4530), [@haircommander](https://github.com/haircommander))
  - Ingress/Egress burst limit is now set slightly below 4GB, which properly sets 4GB as the upper limit of burst ([#4348](https://github.com/cri-o/cri-o/pull/4348), [@zizon](https://github.com/zizon))
+ - When dropping the infra container, the container inspect endpoint now returns a PID when requesting the infra container. ([#4613](https://github.com/cri-o/cri-o/pull/4613), [@haircommander](https://github.com/haircommander))
 
 #### Other (Cleanup or Flake)
  - Add clean_shutdown_file option to allow crio/crio wipe to verify crio had time to shutdown cleanly ([#3999](https://github.com/cri-o/cri-o/pull/3999), [@haircommander](https://github.com/haircommander))
