--- a/v1.21.0-dev.md
+++ b/v1.21.0-dev.md
@@ -15,14 +15,14 @@
 # CRI-O v1.21.0-dev
 
 The release notes have been generated for the commit range
-[v1.20.0...f2f339d](https://github.com/cri-o/cri-o/compare/v1.20.0...f2f339d1489e7774e4c2b5923b04fcbed768cd86) on Sat, 20 Mar 2021 19:38:48 UTC.
+[v1.20.0...30ec358](https://github.com/cri-o/cri-o/compare/v1.20.0...30ec3581466bb7aa23213cfe2997ac6686451c41) on Mon, 22 Mar 2021 03:42:42 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f2f339d1489e7774e4c2b5923b04fcbed768cd86.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.f2f339d1489e7774e4c2b5923b04fcbed768cd86.tar.gz)
-- [cri-o.arm64.f2f339d1489e7774e4c2b5923b04fcbed768cd86.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.f2f339d1489e7774e4c2b5923b04fcbed768cd86.tar.gz)
+- [cri-o.amd64.30ec3581466bb7aa23213cfe2997ac6686451c41.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.30ec3581466bb7aa23213cfe2997ac6686451c41.tar.gz)
+- [cri-o.arm64.30ec3581466bb7aa23213cfe2997ac6686451c41.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.30ec3581466bb7aa23213cfe2997ac6686451c41.tar.gz)
 
 ## Changelog since v1.20.0
 
@@ -66,6 +66,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Other (Cleanup or Flake)
  - Add clean_shutdown_file option to allow crio/crio wipe to verify crio had time to shutdown cleanly ([#3999](https://github.com/cri-o/cri-o/pull/3999), [@haircommander](https://github.com/haircommander))
  - Add metric to grab latency for individual CRI calls. ([#4598](https://github.com/cri-o/cri-o/pull/4598), [@umohnani8](https://github.com/umohnani8))
+ - Log the container stop timeout at default log level ([#4549](https://github.com/cri-o/cri-o/pull/4549), [@mrunalp](https://github.com/mrunalp))
 
 #### Uncategorized
  - Allows users to set stream timeout from config ([#4529](https://github.com/cri-o/cri-o/pull/4529), [@wgahnagl](https://github.com/wgahnagl))
